--- a/frontend/src/OwnRequests.css
+++ b/frontend/src/OwnRequests.css
@@ -149,3 +149,30 @@ button {
     cursor: not-allowed;
 
   }
+
+  .filter-section {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.filter-section label {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-right: 10px;
+    color: #333;
+}
+
+.filter-section select {
+    padding: 8px;
+    font-size: 1em;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.filter-section select:hover {
+    background-color: #f1f1f1;
+}
