update frontend to use loginid for api call

--- a/frontend/src/StaffScheduler.css
+++ b/frontend/src/StaffScheduler.css
@@ -12,6 +12,11 @@
   font-size: small;
   margin-bottom: 0px;
 }
+
+.dept {
+  font-size: small;
+  margin-bottom: 0px;
+}
   
 .option {
   margin-bottom: 0px;
